          in secure mode (reported by Phillip Hallam-Baker).
	- fix build when perl is enabled and fading is disabled.
	- fix regression that broke continuous scrolling when pressing
	  and holding the scrollbar up or down button, gentoo bug #493992.
	- increase the maximum length of a command sequence to 32k bytes,
          to allow longer OSC sequences (previous limit was 2k).
        - new extension: selection-to-clipboard.

9.19 Sun Oct 27 17:16:07 CET 2013
	- work around perl 5.18.0 breakage in tabbed extension
          (reported by Karol Blazewicz) and in pod (Dominic Hargreaves).
	- fix regression that caused the double-click word selection to
	  erroneously include a tab on the left of the selected word.
        - implement FOCUS variable and focus_fade function in background
          expression, to allow focus-sensitive background images.
	- add support for the set cursor style (DECSCUSR) control
	  function.
	- honour cursorColor also when the cursor style is underline.
        - export some Color_xxx constants to Perl.

9.18 Sun Mar 24 15:33:35 CET 2013
	- fix regression that caused artifacts on resize.

9.17 Fri Mar  1 13:46:08 CET 2013
	- add shade operator in background perl extension.
        - avoid starting or ending the selection in the middle of wide
          characters to avoid artifacts (reported by Tiago Resende).
	- fix artifacts that may occur if the character in the cursor
	  cell has width > 1 (reported by Tiago Resende).
	- fix regression that causes artifacts on scrolling if
	  saveLines is 0 and the window is resized (reported by Bert
	  Münnich).
	- fix build when perl is enabled and pixbuf and transparency
	  are disabled.

9.16 Thu Dec 27 11:56:43 CET 2012
	- the "so much new stuff your eyes will pop out" release.
        - INCOMPATIBLE CHANGE: renamed urlLauncher resource to url-launcher.
	- fix processing of DEC private mode save sequences (patch by Patrick
	  Hemmer).